# gmstock-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  pyproject.toml
alembic/: script.py.mako
alembic/versions/: 9a717445c336_add_unique_constraint.py  9c313f035956_create_file_table.py  b60dedb5c779_add_script_table.py
db/: info.py  info_db.py  mongo.py
dto/: api.py  api_object.py  db_object.py  db_resp.py
internal/: data_service.py  file_service.py  info_service.py
routers/: data.py  data_controller.py  script.py  script_controller.py  script_management.py  testing.py
schedule/: schedule.py
scheduler/: scheduler.py
utils/: _singleton.py  script_base.py  singleton.py  util.py
