[tool.poetry]
name = "backend"
version = "0.1.0"
description = "none"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
