[tool.poetry]
name = "backend"
version = "0.1.0"
description = "none"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
watchfiles = "^0.16.1"
pymongo = "^4.2.0"
pydantic = "^1.9.2"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
pre-commit = "^2.20.0"
SQLAlchemy-Utils = "^0.38.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
